--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -63,3 +63,26 @@ html{
     margin-left: 35px;
     font-size: 'Bodoni Moda', serif;
 }
+
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search input {
+    outline: 0;
+    border: 0;
+    width: 350px;
+    height: 35px;
+    padding: 0 0.5rem;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.search button {
+    outline: none;
+    border: none;
+    height: 35px;
+    padding: 0 0.5rem;    
+}
